# aitechdocgenerator

./: .gitignore  LICENSE  README.md  READMEpt-br.md  projeto.md  setup.bat  setup.sh  start.sh
.github/workflows/: testes.yml
backend/: .env.example  README.md  mermaidDiagram.txt  pyproject.toml  requirements.txt  run.bat  run.sh
backend/app/: logging_config.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: analyses.py  auth.py  chat.py  repos.py
backend/app/services/: chat_service.py  context_builder.py  doc_generator.py  github_fetcher.py  llm_provider.py  lm_studio_client.py  ollama_client.py  opencode_client.py  pdf_generator.py  repo_indexer.py
backend/tests/: conftest.py  test_analyses.py  test_auth.py  test_chat_service.py  test_opencode_client.py  test_repos.py
frontend/: .env.example  app.py  logging_config.py  pyproject.toml  start.bat  start.sh
frontend/static/css/: style.css
frontend/templates/: analysis_result.html  analyzed_repos.html  base.html  chat.html  dashboard.html  login.html  register.html
