[project]
name = "autodocgen-backend"
version = "0.1.0"
description = "AutoDocGen backend - FastAPI service for automatic documentation generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "pydantic[email]",
    "python-jose[cryptography]",
    "passlib",
    "bcrypt==4.0.1",
    "python-multipart",
    "httpx",
    "requests",
    "aiofiles",
    "markdown",
    "xhtml2pdf",
]
